--- a/GeometryWars/source/Game.Desktop.Shared/Game.Desktop.Shared.vcxitems.filters
+++ b/GeometryWars/source/Game.Desktop.Shared/Game.Desktop.Shared.vcxitems.filters
@@ -8,9 +8,8 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)ScoreManager.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)SpriteManager.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)BombManager.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)ScoreHolder.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)Collectible.cpp" />
-	
+    <ClCompile Include="$(MSBuildThisFileDirectory)LivesManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Bullet.h" />
@@ -21,8 +20,8 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)ScoreManager.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)SpriteManager.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)BombManager.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)ScoreHolder.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)Collectible.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)LivesManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds.xml" />
