--- a/GeometryWars/source/Game.Desktop.Shared/Game.Desktop.Shared.vcxitems.filters
+++ b/GeometryWars/source/Game.Desktop.Shared/Game.Desktop.Shared.vcxitems.filters
@@ -1,29 +1,197 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="$(MSBuildThisFileDirectory)Bullet.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)Enemy.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)Player.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)ActionDebug.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)ScoreManager.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)SpriteManager.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)BombManager.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)Collectible.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)EnemySquare.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)LivesManager.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)Bullet.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Collectible.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Enemy.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)EnemySquare.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Player.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)ActionDebug.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)BombManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)LivesManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)ScoreManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)SpriteManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="$(MSBuildThisFileDirectory)Bullet.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)Enemy.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)pch.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)Player.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)ActionDebug.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)ScoreManager.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)SpriteManager.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)BombManager.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)Collectible.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)EnemySquare.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)LivesManager.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)Bullet.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Collectible.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Enemy.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)EnemySquare.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Player.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)ActionDebug.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)BombManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)LivesManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)ScoreManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)SpriteManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\bullet.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_arrow.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_diamond.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_pinwheel.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_square.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\geometrywars_test.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\input.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\input_v2.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\player_test.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\player1.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\polygon.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\sprite.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\GameOver.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\InGameSector.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\StartMenu.xml">
+      <Filter>Content\Assets</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds_small.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds_small_include.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\sample_entity_xml_class.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_action_switch_case.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_action_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_beginplay_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_beginplay_test_music.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_canevertick_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_create_entity_from_file_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_create_entity_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_destroy_entity_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_entity_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_entitylist_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_expression_ref_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_function_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_if_else_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_invalid_table.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_invalid_table_state.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_literal_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_multi_entity_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test_arguments.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test_notnotified.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test_subtype.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_while_test.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xmltabletest.xml">
+      <Filter>Content\Examples</Filter>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds.xml" />
@@ -108,44 +276,23 @@
     <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_while_test.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds_small.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds_small_include.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\bullet.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_arrow.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_diamond.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_pinwheel.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_square.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\geometrywars_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\input.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\input_v2.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\player1.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\player_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\polygon.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\sample_entity_xml_class.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\sprite.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xmltabletest.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_action_switch_case.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_action_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_beginplay_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_beginplay_test_music.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_canevertick_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_create_entity_from_file_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_create_entity_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_destroy_entity_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_entitylist_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_entity_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_expression_ref_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_function_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_if_else_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_invalid_table.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_invalid_table_state.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_literal_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_multi_entity_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test_arguments.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test_notnotified.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test_subtype.xml" />
-    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_while_test.xml" />
+    <Filter Include="GameObjects">
+      <UniqueIdentifier>{d95d930f-ae2d-47f0-92af-ff60ea32ee8f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Actions">
+      <UniqueIdentifier>{ac4086a6-670f-4978-8659-f707cf8fce29}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Managers">
+      <UniqueIdentifier>{53faa0d6-7074-4acf-81a4-2614413d27ea}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Content">
+      <UniqueIdentifier>{39856d85-49b4-409e-a504-15fb3aab0753}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Content\Assets">
+      <UniqueIdentifier>{d5473efa-1c40-45aa-91f4-5011856119dc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Content\Examples">
+      <UniqueIdentifier>{6f6bb8a6-bfc8-45ff-b58c-62e1749189c4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
